--- a/pixi.toml
+++ b/pixi.toml
@@ -12,8 +12,9 @@ clean = "cargo clean"
 test = "cargo test"
 fmt = "cargo fmt"
 lint = { cmd = "cargo clippy", depends-on = ["fmt"] }
-lint-fix = "cargo clippy --fix --allow-dirty"
+lint-fix = { cmd = "cargo clippy --fix --allow-dirty", depends-on = ["fmt"] }
 doc = "cargo doc"
+doc-open = "cargo doc --open"
 
 [dependencies]
 rust = ">=1.93.1,<1.94"
